# vim-plugin-metadata

./: .gitignore  Cargo.toml  README.md
.github/workflows/: py-CI.yml
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/src/: data.rs  lib.rs  parser.rs
lib/src/parser/: grammar.rs  mod.rs  treenodes.rs
py-bindings/: CHANGELOG.md  Cargo.toml  README.md  pyproject.toml  vim_plugin_metadata.pyi
py-bindings/src/: lib.rs
