[workspace]
members = [
    "lib",
    "py-bindings",
]
resolver = "2"

[workspace.package]
authors = ["David Barnett"]
edition = "2021"
rust-version = "1.74.1"
repository = "https://github.com/dbarnett/vim-plugin-metadata"
license = "MIT"
keywords = ["vim", "parsing", "tree-sitter"]
categories = [
    "parser-implementations",
]

[workspace.dependencies]
vim-plugin-metadata = { path = "lib" }
