[package]
name = "vim-plugin-metadata"
version = "0.2.0"
description = "Parse and analyze your vim plugins, from Rust!"
readme = "../README.md"
exclude = [
    ".gitignore",
]
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
itertools = "0.13.0"
tree-sitter = "0.23.0"
tree-sitter-vim = "0.4.0"
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.12.0"
