[package]
name = "vim-plugin-metadata"
version = "1.0.0-rc.0"
description = "Parse and analyze your vim plugins, from Rust!"
readme = "README.md"
exclude = [
    ".gitignore",
]
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
baz-tree-sitter-traversal = "0.1.4"
quoted-string = "0.2"
tree-sitter = "0.23.0"
tree-sitter-vim = "0.4.0"
unicode-ellipsis = "0.2.0"
walkdir = "2.5.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.12.0"
